album in user and create conversation

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=nguyen
-MONGO_URL=mongodb+srv://nguyen:123@cluster0.xbv4f.mongodb.net/socialapp?retryWrites=true&w=majority
-CLOUD_NAME=dp2rat4ch
+MONGO_URL=mongodb://localhost/socialapp
 API_KEY=425532584915743
 API_SECRET=ctAfK8LYowb8FcCu4l_RvXcrgDg
+CLOUD_NAME=dp2rat4ch
